--- a/src/Styling/SearchResult.module.css
+++ b/src/Styling/SearchResult.module.css
@@ -1,4 +1,65 @@
 .container{
     justify-content: flex-start;
     align-items: center;
+    margin: 10px;
+}
+
+.song{
+    font-size: 12px;
+    margin-left: 5%;
+    width: 95%;
+    height: 50%;
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.title{
+    font-weight: bolder;
+    color: green;
+}
+
+
+
+.artist{
+    font-style: italic;
+    color: black;
+}
+
+.background{
+    background-color: #BDE1C5;
+    border-radius: 5px;
+    width: 150px;
+    height: 50px;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px;
+}
+
+.text{
+    width: 80%;
+    height: 100%;
+}
+
+.buttons{
+    margin-right: 5px;
+    width: 20%;
+    height: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.play{
+    width: 90%;
+    height: 40%;
+}
+
+.deleteSong{
+    width: 50%;
+}
+
+.icon{
+    width: 100%
 }
