--- a/src/Styling/SongInfo.module.css
+++ b/src/Styling/SongInfo.module.css
@@ -30,7 +30,7 @@
 .background{
     background-color: var(--backgroundcolor);
     border-radius: 5px;
-    width: 200px;
+    width: 100%;
     height: 50px;
     justify-content: space-between;
     align-items: center;
