--- a/src/Styling/ExplanationFull.module.css
+++ b/src/Styling/ExplanationFull.module.css
@@ -11,7 +11,7 @@
 .containerRow1{
     justify-content: space-around;
     height: 60%;
-    align-items: flex-end;
+    align-items: center;
 }
 
 .containerRow2{
