--- a/src/Styling/Home.module.css
+++ b/src/Styling/Home.module.css
@@ -1,5 +1,9 @@
 .container{
     justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100vw;
+    height: 100vh;
+    overflow: scroll;
 }
 
 
