--- a/src/Styling/Sliders.module.css
+++ b/src/Styling/Sliders.module.css
@@ -2,7 +2,7 @@
     justify-content: space-around;
     width: 100%;
     height: 300px;
-    margin: 10px;
+    margin: 10px 10px 50px 10px;
 }
 
 .danceability{
