--- a/src/Styling/VerticalSlider.module.css
+++ b/src/Styling/VerticalSlider.module.css
@@ -7,6 +7,12 @@
 }
 
 .icon{
-    width: 50%;
-    height: 50%;
+    height: 30px;
+}
+
+.slider{
+    position: relative;
+    height: 100%;
+    touchAction: none;
+    margin-top:5px;
 }
