--- a/src/Styling/InfoExplanations.module.css
+++ b/src/Styling/InfoExplanations.module.css
@@ -1,10 +1,10 @@
-.imageContainer{
+.explanation{
     align-items: center;
-    margin-top: 10px;
+    width: 50%;
 }
 
 .textContainer{
-    align-items: center;
+    align-items: flex-start;
     margin-left: 20px;
     font-size: 20px;
     color: white;
@@ -18,9 +18,20 @@
     border-style: solid;
     border-width: 1px;
     border-color: white;
-    margin-left: 50%;
+    margin-left: 50px;
 }
 
-.protocol{
-    width: 50%;
+.containerExp{
+    align-items: flex-start;
+    width: 100%;
+    color: #e1e1e1;
+}
+
+.textExplanation{
+    margin-top: 20px;
+    width: 80%;
+}
+
+.explanationImage{
+    height: 200px;
 }
