--- a/src/Styling/InfoExplanations.module.css
+++ b/src/Styling/InfoExplanations.module.css
@@ -3,6 +3,11 @@
     width: 50%;
 }
 
+.scatterplotContainer{
+    align-items: center;
+    width: 50%;
+}
+
 .textContainer{
     align-items: flex-start;
     margin-left: 20px;
@@ -33,5 +38,9 @@
 }
 
 .explanationImage{
+    height: 200px;
+}
+
+.scatterplotImage{
     height: 200px;
 }
