--- a/src/Styling/Playlist.module.css
+++ b/src/Styling/Playlist.module.css
@@ -22,7 +22,12 @@
 }
 
 .button{
-    border-radius: 5px;
-    height: 20px;
-    margin: 5px;
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    background-color: #268DAE;
+    border-style: solid;
+    border-width: 1px;
+    border-color: white;
+    margin: 10px;
 }
