--- a/src/Styling/SearchResults.module.css
+++ b/src/Styling/SearchResults.module.css
@@ -5,3 +5,12 @@
     width: 100%;
     height: 95%;
 }
+
+.deleteDiv{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 12px;
+    justify-content: flex-end;
+}
+
