--- a/src/Styling/PlaylistSong.module.css
+++ b/src/Styling/PlaylistSong.module.css
@@ -30,7 +30,8 @@
 .background{
     background-color: #BDE1C5;
     border-radius: 5px;
-    width: 150px;
+    min-width: 150px;
+    width:80%;
     height: 50px;
     justify-content: space-between;
     align-items: center;
@@ -44,7 +45,7 @@
 
 .buttons{
     margin-right: 5px;
-    width: 20%;
+    width: 32px;
     height: 100%;
     justify-content: space-around;
     align-items: center;
@@ -57,10 +58,10 @@
 }
 
 .deleteSong{
-    width: 50%;
+    height: 20px;
 }
 
 .icon{
-    width: 100%
+    height: 20px;
 }
 
