--- a/src/Styling/Recommendations.module.css
+++ b/src/Styling/Recommendations.module.css
@@ -1,5 +1,5 @@
 .col3{
-    width: 45%;
+    width: 50%;
     margin-left: 10px;
     margin-top: 10px;
     flex-wrap: wrap;
@@ -35,6 +35,7 @@ label{
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    min-width: 200px;
     width: 40%;
     margin: 5px;
     height: 40px;
