--- a/src/Styling/InfoSliders.module.css
+++ b/src/Styling/InfoSliders.module.css
@@ -7,6 +7,8 @@
     margin-left: 20px;
     font-size: 20px;
     color: white;
+    max-width: 800px;
+
 }
 
 .button{
@@ -23,4 +25,5 @@
 .containerCenter{
     align-items: center;
     width: 100%;
+    max-width: 800px;
 }
