--- a/src/Styling/Protocol.module.css
+++ b/src/Styling/Protocol.module.css
@@ -1,13 +1,14 @@
 .imageContainer{
-    align-items: center;
+    align-items: flex-start;
     margin-top: 10px;
 }
 
 .textContainer{
-    align-items: center;
+    align-items: flex-start;
     margin-left: 20px;
     font-size: 20px;
     color: white;
+    max-width: 800px;
 }
 
 .button{
@@ -18,7 +19,7 @@
     border-style: solid;
     border-width: 1px;
     border-color: white;
-    margin-left: 50%;
+    margin-left: 10%;
 }
 
 .protocol{
