--- a/src/Styling/InfoSliders.module.css
+++ b/src/Styling/InfoSliders.module.css
@@ -3,7 +3,7 @@
 }
 
 .textContainer{
-    align-items: flex-start;
+    align-items: center;
     margin-left: 20px;
     font-size: 20px;
     color: white;
@@ -19,7 +19,12 @@
     border-style: solid;
     border-width: 1px;
     border-color: white;
-    margin-left: 50px;
+    margin-left: 50%;
+}
+
+.container{
+    align-items: center;
+    width: 100%;
 }
 
 .containerCenter{
