--- a/src/Styling/NFC.module.css
+++ b/src/Styling/NFC.module.css
@@ -1,4 +1,10 @@
 .container{
+    width: 100%;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.divSurvey{
     max-width: 800px;
-    padding: 10px;
 }
