--- a/src/Styling/Protocol.module.css
+++ b/src/Styling/Protocol.module.css
@@ -1,14 +1,14 @@
 .imageContainer{
-    align-items: flex-start;
+    align-items: center;
     margin-top: 10px;
 }
 
 .textContainer{
-    align-items: flex-start;
+    align-items: center;
     margin-left: 20px;
     font-size: 20px;
     color: white;
-    max-width: 800px;
+    /*max-width: 800px;*/
 }
 
 .button{
@@ -19,9 +19,10 @@
     border-style: solid;
     border-width: 1px;
     border-color: white;
-    margin-left: 10%;
+    margin-left: 50%;
 }
 
 .protocol{
     width: 50%;
+    max-width: 800px;
 }
