--- a/src/Styling/InfoExplanations.module.css
+++ b/src/Styling/InfoExplanations.module.css
@@ -11,7 +11,7 @@
 }
 
 .textContainer{
-    align-items: flex-start;
+    align-items: center;
     margin-left: 20px;
     font-size: 20px;
     color: white;
@@ -25,7 +25,7 @@
     border-style: solid;
     border-width: 1px;
     border-color: white;
-    margin-left: 50px;
+    margin-left: 50%;
 }
 
 .containerExp{
@@ -45,4 +45,9 @@
 
 .scatterplotImage{
     height: 200px;
+}
+
+.container{
+    align-items: center;
+    justify-content: flex-start;
 }
