--- a/src/Styling/Recommendation.module.css
+++ b/src/Styling/Recommendation.module.css
@@ -7,6 +7,10 @@
     min-height: 172px;
 }
 
+.hidden{
+    display: none;
+}
+
 .shake{
     animation: shake 1s;
     animation-iteration-count: infinite;
