--- a/src/Styling/Sliders.module.css
+++ b/src/Styling/Sliders.module.css
@@ -2,6 +2,7 @@
     justify-content: space-around;
     width: 100%;
     height: 200px;
+    min-height: 200px;
     margin: 10px 10px 30px 10px;
 }
 
