--- a/src/Styling/ExplanationFit.module.css
+++ b/src/Styling/ExplanationFit.module.css
@@ -4,10 +4,38 @@
     fill: none;
     stroke: green;
     stroke-linecap: round;
+    cursor: pointer;
 }
 
 .text{
     font-size: 10px;
     text-anchor: middle;
     line-height: 125px ;
+    cursor: pointer;
+
+}
+
+.container{
+    align-items: center;
+    font-size: 12px;
+
+    background-color: #D6FFDF;
+    justify-content: flex-start;
+    width:100%;
+    height: 120px;
+    -webkit-border-radius: 0px 0px 5px 5px;
+    -moz-border-radius: 0px 0px 5px 5px;
+    border-radius: 0px 0px 5px 5px;
+}
+
+.row1{
+    width: 100%;
+    height: 50%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.row2{
+    width: 100%;
+    margin-left:5px;
 }
