--- a/src/Styling/InfoExplanations.module.css
+++ b/src/Styling/InfoExplanations.module.css
@@ -29,7 +29,8 @@
 }
 
 .containerExp{
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     color: #e1e1e1;
 }
